<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="BMI" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Calories" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Recipes" />

    <item
        android:id="@+id/navigation_shopping_list"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Shopping List" />
</menu>